fix(list-steps): Align steps icons

--- a/src/_sass/components/_list-steps.scss
+++ b/src/_sass/components/_list-steps.scss
@@ -12,6 +12,7 @@
     font-size: 16px;
     font-weight: 500;
     color: color(white);
+    line-height: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
